--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <title>FE1024</title>
+  <style>
+    body{
+      background-color:#eee;
+      color:#444;
+      padding: 40px 20px;
+    }
+    .fe-center{
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  Hello FE1024
+  <h1 class='fe-center'>Hello FE1024</h1>
+  <h2>Demos</h2>
+  <ul>
+    <li><a href='/demos/fullscreen/'>fullscreen.js</a></li>
+    <li><a href='/demos/lipper/'>lipper</a></li>
+  </ul>
 </body>
 </html>
