--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta http-equiv="Cache-Control" content="no-transform">
+  <meta http-equiv="Cache-Control" content="no-siteapp">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Chengzi">
+  <meta property="og:url" content="http://tt-ghost.github.io/index.html">
+  <meta property="og:site_name" content="Chengzi">
+  <meta property="og:locale" content="zh-Hans">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Chengzi">
+  <link rel="canonical" href="http://tt-ghost.github.io/">
+
   <title>FE1024</title>
   <style>
     body{
