--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Chengzi">
   <link rel="canonical" href="http://tt-ghost.github.io/">
-
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?1678935a4ffc4d57065ae4f9f656b164";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
   <title>FE1024</title>
   <style>
     body{
