--- a/demos/fullscreen/index.html
+++ b/demos/fullscreen/index.html
@@ -1,11 +1,19 @@
----
-layout: false
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <title>Full Screen Demo</title>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?030df4653b3a38871b0738228e39168f";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
   <style>
     body{
       background: #eee;
