--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Chengzi">
   <link rel="canonical" href="http://tt-ghost.github.io/">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62287374-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-62287374-3');
+  </script>
+
   <script>
     var _hmt = _hmt || [];
     (function() {
