--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-62287374-3');
+    alert(navigator.clipboard)
   </script>
     
   <title>FE1024</title>
