--- a/demos/fullscreen/index.html
+++ b/demos/fullscreen/index.html
@@ -6,13 +6,7 @@
   <title>Full Screen Demo</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62287374-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-62287374-3');
-  </script>
+  <script src='/ga.js'></script>
   <style>
     body{
       background: #eee;
