--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
   <link rel="canonical" href="http://tt-ghost.github.io/">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62287374-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-62287374-3');
-  </script>
+  <script src='/ga.js'></script>
     
   <title>FE1024</title>
   <style>
@@ -39,6 +33,8 @@
   <h1 class='fe-center'>Hello FE1024</h1>
   <h2>Demos</h2>
   <ul>
+    <li><a href='/demos/epage/'>epage</a></li>
+    <li><a href='/demos/epage/awards.html'>年终奖计算器</a></li>
     <li><a href='/demos/fullscreen/'>fullscreen.js</a></li>
     <li><a href='/demos/lipper/'>lipper</a></li>
   </ul>
