--- a/demos/epage/epage-iview.html
+++ b/demos/epage/epage-iview.html
@@ -3,17 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  
   <link href="//cdn.bootcss.com/iview/2.14.3/styles/iview.css" rel="stylesheet">
   <link href='//cdn.jsdelivr.net/npm/vant@2.8/lib/index.css' rel='stylesheet'></link> 
+  
   <link href="/demos/epage/lib/epage.css" rel="stylesheet">
   <link href="/demos/epage/lib/epage-iview.css" rel="stylesheet">
   <link href="/demos/epage/lib/epage-vant.css" rel="stylesheet">
+  
   <script src='/ga.js'></script>
   <script type="text/javascript" src="//cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
   <script type="text/javascript" src="//cdn.bootcss.com/vuex/3.1.1/vuex.min.js"></script>
+  
   <script type="text/javascript" src="//cdn.bootcss.com/iview/2.14.3/iview.min.js"></script>
+  <script type="text/javascript" src='//cdn.jsdelivr.net/npm/vant@2.8/lib/vant.min.js' ></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/sortablejs@1.8.4/Sortable.min.js"></script>
+  
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.20.0/vuedraggable.umd.min.js"></script>
+  
   <script src='/demos/epage/lib/epage-core.min.js'></script>
   <script src='/demos/epage/lib/epage.min.js'></script>
   <script src='/demos/epage/lib/epage-iview.min.js'></script>
