--- a/demos/epage/awards.html
+++ b/demos/epage/awards.html
@@ -47,14 +47,14 @@
   </header>
   <div id='root'></div>
   <script>
-    
-const { default: widgets, Render } = EpageIview
+const { render } = EpageIview    
+const { default: widgets, entry: component } = EpageIview
 const el = document.getElementById('root')
 
 fetch('/demos/epage/source/awards.json')
 .then(res => res.json())
 .then(schema => {
-  new Render({el, widgets, schema })
+  new render.VueRender({el, widgets, schema, component })
 })
 
 
