--- a/demos/epage/awards.html
+++ b/demos/epage/awards.html
@@ -42,12 +42,12 @@
 </head>
 <body>
   <header class='fe-header'>
-    <b class='title'>EpageIview 渲染器(V0.6.0)</b>
+    <b class='title'>EpageIview 渲染器</b>
     <a href='/demos/epage/epage-iview.html'>返回设计器</a>
   </header>
   <div id='root'></div>
   <script>
-const { render } = EpageIview    
+const { render } = EpageCore   
 const { default: widgets, entry: component } = EpageIview
 const el = document.getElementById('root')
 
