--- a/source/index.html
+++ b/source/index.html
@@ -24,11 +24,9 @@
     <script src="/ga.js"></script>
     <link rel="icon" href="/favicon.ico" />
     <title>FE1024</title>
-    <script type="module" crossorigin src="/assets/index.a14431d9.js"></script>
-    <link rel="stylesheet" href="/assets/index.967e88f3.css">
   </head>
   <body>
     <div id="app"></div>
-    
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
