--- a/index_backup.html
+++ b/index_backup.html
@@ -24,8 +24,11 @@
     <script src="/ga.js"></script>
     <link rel="icon" href="/favicon.ico" />
     <title>FE1024</title>
+    <script type="module" crossorigin src="/assets/index.74392441.js"></script>
+    <link rel="stylesheet" href="/assets/index.efcb75fd.css">
   </head>
   <body>
-    <div id="app">FE1024</div>
+    <div id="app"></div>
+    
   </body>
 </html>
