--- a/404.html
+++ b/404.html
@@ -2,12 +2,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>开源系统|在线游戏|在线示例|FE1024</title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62287374-3"></script>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/sWd-NsD_.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DPk4Cw5O.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B6vh5P2u.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/73gruX0h.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CFzAVhLr.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/C_82N1aG.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BqLsk4Wz.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/h7HYjqKe.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/_VrOA18W.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cdg34qnU.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/B8Ls9y6m.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CP-O5qnA.js">
 <meta name="description" content="FE1024 在线示例演示|开源项目|开源游戏">
 <script>
           window.dataLayer = window.dataLayer || [];
@@ -24,6 +24,6 @@
             s.parentNode.insertBefore(hm, s);
           })();
            </script>
-<script type="module" src="/_nuxt/sWd-NsD_.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"开源系统|在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1731514499510,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"d254c40c-05fd-40a3-8ccf-4f48fcf3d4a4",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/BqLsk4Wz.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"开源系统|在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1731515425982,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"5887d3e6-b97a-4c76-81fe-ea6eec398daf",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
