--- a/cms/index.html
+++ b/cms/index.html
@@ -2,9 +2,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>开源系统|在线游戏|在线示例|FE1024</title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62287374-3"></script>
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/games/_payload.json?5887d3e6-b97a-4c76-81fe-ea6eec398daf">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/cms/_payload.json?5887d3e6-b97a-4c76-81fe-ea6eec398daf">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/BqLsk4Wz.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BpqIf7DW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DEsE95rA.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/h7HYjqKe.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/_VrOA18W.js">
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/Cdg34qnU.js">
@@ -27,5 +27,5 @@
           })();
            </script>
 <script type="module" src="/_nuxt/BqLsk4Wz.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"开源系统|在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><div><div></div><div>Games</div></div></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/games/_payload.json?5887d3e6-b97a-4c76-81fe-ea6eec398daf">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/games",1731515426003]</script>
+<script id="unhead:payload" type="application/json">{"title":"开源系统|在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><div><div></div><div>CMS</div></div></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/cms/_payload.json?5887d3e6-b97a-4c76-81fe-ea6eec398daf">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/cms",1731515426003]</script>
 <script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"5887d3e6-b97a-4c76-81fe-ea6eec398daf",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
