--- a/online/cms/index.html
+++ b/online/cms/index.html
@@ -6,7 +6,7 @@
 <style>body,html{background-color:#f5f5f5}body .arco-menu,body .arco-menu .arco-menu-item,body .arco-menu .arco-menu-item.arco-menu-disabled{background-color:transparent}</style>
 <style>.fe-layout-default{margin-left:auto;margin-right:auto;max-width:1600px}.fe-layout-default .arco-page-header-divider{display:none}.fe-layout-default-body{min-height:500px;padding:32px}.fe-layout-default-footer{color:#666;text-align:center}</style>
 <link rel="stylesheet" href="/_nuxt/entry.dVRrsQzk.css" crossorigin>
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/_payload.json?7288f3a5-b8a3-4fc5-8414-d771514f173f">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/online/cms/_payload.json?7288f3a5-b8a3-4fc5-8414-d771514f173f">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/CiZnNBTQ.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/DAU-YL75.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/5zba5mT4.js">
@@ -30,5 +30,5 @@
           })();
            </script>
 <script type="module" src="/_nuxt/CiZnNBTQ.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"开源系统|在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><!--[--><div></div><!----><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/_payload.json?7288f3a5-b8a3-4fc5-8414-d771514f173f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/",1731585066776]</script>
+<script id="unhead:payload" type="application/json">{"title":"开源系统|在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><!--[--><div></div><!----><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/online/cms/_payload.json?7288f3a5-b8a3-4fc5-8414-d771514f173f">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/online/cms",1731585066907]</script>
 <script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"7288f3a5-b8a3-4fc5-8414-d771514f173f",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
