--- a/online/tools/index.html
+++ b/online/tools/index.html
@@ -6,13 +6,13 @@
 <style>body,html{background-color:#f5f5f5}body .arco-menu,body .arco-menu .arco-menu-item,body .arco-menu .arco-menu-item.arco-menu-disabled{background-color:transparent}</style>
 <style>.fe-layout-default{margin-left:auto;margin-right:auto;max-width:1600px}.fe-layout-default .arco-page-header-divider{display:none}.fe-layout-default-body{min-height:500px;padding:32px}.fe-layout-default-footer{color:#666;text-align:center}</style>
 <link rel="stylesheet" href="/_nuxt/entry.dVRrsQzk.css" crossorigin>
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/online/tools/_payload.json?26c39f04-ef62-4f8f-a09e-d91085da5a8e">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/oXR_ajua.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CGsnjbG5.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/C4E3w8rk.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/so695Cva.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/3M7OpVpK.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/QrA9MWoR.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/online/tools/_payload.json?712dde9f-0d41-47de-aa7b-f1b494bdb50c">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/xlocQeNq.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CAZ59rZM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DYqnRHCM.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DgxbeGSO.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DNBxCEC3.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D5JDzdjm.js">
 <meta name="description" content="FE1024 在线游戏|在线示例|网页游戏|开源">
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -29,6 +29,6 @@
       s.parentNode.insertBefore(hm, s);
     })();
      </script>
-<script type="module" src="/_nuxt/oXR_ajua.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><!--[--><div></div><!----><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/online/tools/_payload.json?26c39f04-ef62-4f8f-a09e-d91085da5a8e">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/online/tools",1731672462681]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"26c39f04-ef62-4f8f-a09e-d91085da5a8e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/xlocQeNq.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><!--[--><div></div><!----><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/online/tools/_payload.json?712dde9f-0d41-47de-aa7b-f1b494bdb50c">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/online/tools",1731674058292]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"712dde9f-0d41-47de-aa7b-f1b494bdb50c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
