--- a/online/games/index.html
+++ b/online/games/index.html
@@ -6,13 +6,15 @@
 <style>body,html{background-color:#f5f5f5}body .arco-menu,body .arco-menu .arco-menu-item,body .arco-menu .arco-menu-item.arco-menu-disabled{background-color:transparent}</style>
 <style>.fe-layout-default{margin-left:auto;margin-right:auto;max-width:1600px}.fe-layout-default .arco-page-header-divider{display:none}.fe-layout-default-body{min-height:500px;padding:32px}.fe-layout-default-footer{color:#666;text-align:center}</style>
 <link rel="stylesheet" href="/_nuxt/entry.QjV_0wSt.css" crossorigin>
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/online/games/_payload.json?25c6a14c-a104-47c4-bec1-15d35d966659">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ScRmQDb8.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CTa2vofx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BiJ40pNt.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BMKIsS3d.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BXW91KbJ.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/r9VHd1NY.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/online/games/_payload.json?fbd5b143-f2d3-45f9-b29a-a61221cfde81">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DhUrEDIg.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BgR42oRb.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/UXodP6mY.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CNbQjmel.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C-EjTd67.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D7Ra_FFQ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CQWJPE--.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/xBehRjXu.js">
 <meta name="description" content="FE1024 在线游戏|在线示例|网页游戏|开源">
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -29,6 +31,6 @@
       s.parentNode.insertBefore(hm, s);
     })();
      </script>
-<script type="module" src="/_nuxt/ScRmQDb8.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><!--[--><div></div><!----><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/online/games/_payload.json?25c6a14c-a104-47c4-bec1-15d35d966659">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/online/games",1731931243237]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"25c6a14c-a104-47c4-bec1-15d35d966659",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/DhUrEDIg.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"><!--[--><div></div><!----><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/online/games/_payload.json?fbd5b143-f2d3-45f9-b29a-a61221cfde81">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/online/games",1731935666377]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"fbd5b143-f2d3-45f9-b29a-a61221cfde81",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
