--- a/404.html
+++ b/404.html
@@ -5,12 +5,14 @@
 <link rel="stylesheet" href="https://unpkg.com/@arco-design/web-vue@2.56.3/dist/arco.min.css">
 <style>body,html{background-color:#f5f5f5}body .arco-menu,body .arco-menu .arco-menu-item,body .arco-menu .arco-menu-item.arco-menu-disabled{background-color:transparent}</style>
 <link rel="stylesheet" href="/_nuxt/entry.QjV_0wSt.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ScRmQDb8.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CTa2vofx.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BiJ40pNt.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BMKIsS3d.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BXW91KbJ.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/r9VHd1NY.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DhUrEDIg.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BgR42oRb.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/UXodP6mY.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CNbQjmel.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C-EjTd67.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D7Ra_FFQ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CQWJPE--.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/xBehRjXu.js">
 <meta name="description" content="FE1024 在线游戏|在线示例|网页游戏|开源">
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -27,6 +29,6 @@
       s.parentNode.insertBefore(hm, s);
     })();
      </script>
-<script type="module" src="/_nuxt/ScRmQDb8.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1731931243049,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"25c6a14c-a104-47c4-bec1-15d35d966659",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/DhUrEDIg.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"在线游戏|在线示例|FE1024"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1731935666246,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"fbd5b143-f2d3-45f9-b29a-a61221cfde81",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
